# postcards_system

./: main.py  pyproject.toml
bot/: bot.py  callback_datafactory.py  callback_func.py  cfg.py  chatgpt.py  config.py  create_message.py  dispatcher.py  handlers.py  keyboard.py  main.py  modify.py  tasks.py
bot/db/: __init__.py  bir.csv  engine.py  users.py
img_gen/: __init__.py  modify.py  test.py
img_gen/storage/: happy.csv
storage/core/: happy.csv
